--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=hospital_assesment;Username=juan;Password=juan123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
